# winremote

./: Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  build-deb.sh  config.h  config.h.in  config.status  configure  configure.ac  create-package.sh
autoconf-macros/: add_group_user  ax_nagios_get_distrib  ax_nagios_get_os
autom4te.cache/: output.0  output.1  output.3  output.4  output.5  requests  traces.1  traces.2  traces.3  traces.5
etc/: Makefile.am  commands-samana6.cfg  role-samana6-windows.cfg
scripts/: Makefile.am  configuressl.sh  create-repo.sh  create-signing-keys.sh  install-repo.sh  makedeb.sh  rules.template
src/: Makefile  Makefile.am  Makefile.in  Makefile.old  check_wr_cpu.c  check_wr_disk.c  check_wr_log.c  check_wr_mem.c  check_wr_pf.c  check_wr_service.c  check_wr_uptime.c  exceptions.c  sendmessage.c  wr-enumerate.c  wr-get-schema.c  wr-get-timed.c  wr-get-wmi-class.c  wr-get.c  wr-wql-getval.c  wr-wql.c
src/.deps/: check_wr_cpu-check_wr_cpu.Po  check_wr_cpu-transport.Po  check_wr_cpu.Po  check_wr_disk.Po  check_wr_log.Po  check_wr_mem.Po  check_wr_pf.Po  check_wr_uptime.Po
src/include/: nagios.h  protocol.h  transport.h  xml.h
src/lib/: Makefile  Makefile.am  Makefile.in  cimclass.c  cimclass.h  nagios.c  protocol.c  transport.c  wrcommon.h  xml.c
src/lib/.deps/: libwinremote_a-cimclass.Po  libwinremote_a-nagios.Po  libwinremote_a-protocol.Po  libwinremote_a-transport.Po  libwinremote_a-xml.Po  transport.Po
